--- a/css/coin_detailed.css
+++ b/css/coin_detailed.css
@@ -3,5 +3,96 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
 
+.sized_box {
+    height: 100px;
+}
+
+.coin_logo {
+    border-radius: 50%;
+    margin-right: 20px;
+}
+
+.logo_row {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+
+}
+
+.panel {
+    background-color: #e6e5e5;
+    padding: 10px 20px;
+    border-radius: 8px;
+}
+
+.left_side {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.coin_info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+    width: 80%;
+    border-radius: 8px;
+    background-color: #f5f5f5;
+    padding: 20px;
+}
+
+.description_text {
+    max-width: 600px;
+    font-size: 18px;
+}
+
+.links {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    width: 100%;
+
+}
+
+.links a {
+    text-decoration: none;
+    color: #000;
+    transition: color 0.2s ease-in-out;
+    font-size: 18px;
+    padding-right: 20px;
+}
+
+a:link {
+    color: #202c9a;
+}
+
+a:hover {
+    color: #303ca3;
+}
+
+a:active {
+    color: #09115a;
+}
+
+.price_changes_info {
+    min-width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
 }
